plang/testing/logs/false-incorrect/81/program81.p.p
p (h) (C8vt) (p6 Y) Oh :- b (BsB) t, (ibreZ (FiY)); sMEZ vLdtz (EqA) Xs OY.


kwrw :- hkQC.

gdsS P2 yp (tCDap (Duv2)) (sS qt1x1) :- (afGcG XyNn (J) (Nq)), ((aNi rn)), ((ow XAYpW (JGr) PhNkj (TWyR5), v); fCto u9W; zF; kb; a hUgQg FTmgR (E8B5)).
kEkr (nxJbr k (ANhU)) spk :- (rwR bLB pv2, d63F (Lxq40)); yTF1 iSxZ (mL1X0); l SgG r YC8 (GVq4), tu ASS BTqiZ; sV (X) (tU (SB)); bW (oAYsB JZq (Qe) (Ol)); v XcoF8 qv, w (a47) (OojEy), c EPIBy zT4I (pt l w3 (OC8aX)) Khmhb, h7uy.


tu (CWRO) sh dNh VU :- kYSzQ YfYLB (uE o MlKNC) WeVY; xKuLd nE (me0 (SHjJ) (GXOF2) h4OvV), hG; ejn9 dwX, (kpl KzC mjvQ, hj (gY6 (GZ) mV (vRxE9 HuJkN (ncWK) (ehoG (c5 (Jxgc) b6PZ0 (A)) (wj)))) (hW (yEz (srD5I q (WbikC) (Xv7) (s9dP (A) (yG) (r))) (eRI (zZ LQm6 (Pw)))) (TlXf)) (iGYuD (M) (myv WjTG) k (JsnL)) (WQN)); vURa (D) (RmHo), z (ycu iO) ewUil; cM VGpg (Q4o) (AMn), li, n8 (OL); (ccO (Js), dQ (f mf4d (HJE))), v KMy46 czs8 (U); (f4 dkJV yTdK xaod); t, r, (cJkr3 s Fs5L (U)).

r1un i WwPi zl :- bGay (x4).


tBJn (WlO) d :- ljld (Czd) QcSm m00ed (Y8), m (Cb7A), w7Tn rgTK; hG (q rhajI (m) (ogN (CD) Euf Oh (bzH))) KFL (r h i (r)), (vBto (ftoMZ) HPTP); (p3), n9C k3ii, lwm; (fELOV (Tb) XZNE, x WSjem); (yfG9 Wiz), l li, rQoi Tv, spGC wf5d ViT (c0kV (m (LXW))).
k t4 MCl ikJaC :- (((kmYuR, yzR6c (dBjM pVrs (E) oi In3k) k))).

? t (LM).